@@ -1,5 +1,5 @@
 module ActiveHash
   module Gem
-    VERSION = "0.9.5"
+    VERSION = "0.9.6"
   end
 end
