@@ -1,3 +1,6 @@
+2011-08-31
+  - added a module which adds a .belongs_to_active_hash method to ActiveRecord, since it was broken for Rails 3.1 (thanks to felixclack for pointing this issue out)
+
 2011-06-07
   - fixed bug where .find would not work if you defined your ids as strings
 
